--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -69,6 +69,7 @@
                 </button>
             </form>
         </main>
+        <%- include ('footer'); -%>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <% if (alert) { %>
         <script>
