--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -48,6 +48,7 @@
                 </button>
         </form>
     </main>
+    <%- include ('footer'); -%>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <% if (alert) { %>
         <script>
