--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
@@ -19,11 +20,6 @@
         <% }else{ %> 
             <%-include('header',{login:login}); -%> 
         <%}%>
-
-        <div class="container">
-            <h1 class="border text-center">NOVEDADES</h1>
-        </div>
-
         <div>
             <div
                 id="carouselExampleCaptions"
@@ -56,7 +52,7 @@
                     <div class="carousel-item active">
                         <img
                             src="img/slider-1.jpg"
-                            class="d-block w-100"
+                            class="d-block w-100 slider"
                             alt="banner-1"
                             loading="lazy"
                         />
@@ -71,7 +67,7 @@
                     <div class="carousel-item">
                         <img
                             src="img/slider-3.jpg"
-                            class="d-block w-100"
+                            class="d-block w-100 slider"
                             alt="banner-3"
                             loading="lazy"
                         />
@@ -83,7 +79,7 @@
                     <div class="carousel-item">
                         <img
                             src="img/slider-5.jpg"
-                            class="d-block w-100"
+                            class="d-block w-100 slider"
                             alt="banner-5"
                             loading="lazy"
                         />
@@ -169,7 +165,7 @@
                 </div>
             </div>
         </div>
-
+        <%- include ('footer'); -%> 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
