--- a/views/product.ejs
+++ b/views/product.ejs
@@ -15,7 +15,6 @@
         <%}%>
         <h1><%=sku %></h1>
         <h1><%=description%></h1>
-        <h1></h1>
-        <h1></h1>
+        <%- include ('footer'); -%>
     </body>
 </html>
