--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,56 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Login</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
             }
-        }
-    </style>
-    <link href="css/signin.css" rel="stylesheet" />
-</head>
 
-<body class="text-center">
-    <main class="form-signin">
-        <form id="loginForm" action="/contact" method="POST">
-            <img class="mb-4" src="img/logo.svg" alt="logo" width="80" height="67" />
-            <h1 class="h3 mb-3 fw-normal">Contacto</h1>
-            <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" name="email" placeholder="email" />
-                <label for="floatingInput">Correo electronico</label>
-            </div>
-            <div class="form-floating">
-                <input type="text" class="form-control" id="floatingInput" name="subject" placeholder="Asunto" />
-                <label for="floatingInput">Asunto</label>
-            </div>
-            <div class="form-floating">
-                <textarea class="form-control" id="floatingInput" name="text" placeholder="Ingresa aqui tu consulta">
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+        </style>
+        <link href="css/signin.css" rel="stylesheet" />
+    </head>
+
+    <body class="text-center">
+        <main class="form-signin">
+            <form id="loginForm" action="/contact" method="POST">
+                <img
+                    class="mb-4"
+                    src="img/logo.svg"
+                    alt="logo"
+                    width="80"
+                    height="67"
+                />
+                <h1 class="h3 mb-3 fw-normal">Contacto</h1>
+                <div class="form-floating">
+                    <input
+                        type="email"
+                        class="form-control"
+                        id="floatingInput"
+                        name="email"
+                        placeholder="email"
+                    />
+                    <label for="floatingInput">Correo electronico</label>
+                </div>
+                <div class="form-floating">
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="floatingInput"
+                        name="subject"
+                        placeholder="Asunto"
+                    />
+                    <label for="floatingInput">Asunto</label>
+                </div>
+                <div class="form-floating">
+                    <textarea
+                        class="form-control"
+                        id="floatingInput"
+                        name="text"
+                        placeholder="Ingresa aqui tu consulta"
+                    >
                     </textarea>
-                <label for="floatingPassword">Cúentanos</label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">
+                    <label for="floatingPassword">Cúentanos</label>
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">
                     Enviar
                 </button>
-        </form>
-    </main>
-    <%- include ('footer'); -%>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <% if (alert) { %>
+            </form>
+        </main>
+        <%- include ('footer'); -%>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <% if (alert) { %>
         <script>
             Swal.fire({
                 title: '<%=alertTitle%>',
@@ -63,6 +90,5 @@
             })
         </script>
         <% } %>
-</body>
-
+    </body>
 </html>
