--- a/views/carrito-compras.ejs
+++ b/views/carrito-compras.ejs
@@ -17,8 +17,48 @@
             <% }else{ %>
                 <%-include('header',{login:login}); -%>
                     <%}%>
-                        <%-
-        include ('footer'); -%>
+
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Cuenta Naves Interplatanarias</div>
+                                    Diversos niveles
+                                </div>
+                                <div class="card" style="width: 10rem">
+                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
+                                </div>
+                                <button type="button" class="btn btn-danger">Eliminar</button>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-bold">Cuenta Nave Vía Láctea</div>
+                                        Nivel 451
+                                    </div>
+                                    <div class="card" style="width: 10rem">
+                                        <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
+                                    </div>
+
+                                    <button type="button" class="btn btn-danger">Eliminar</button>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-bold">Cuwnta Sol Naciente</div>
+                                        Nivel 999
+                                    </div>
+                                    <div class="card" style="width: 10rem">
+                                        <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
+                                    </div>
+                                    <button type="button" class="btn btn-danger">Eliminar</button>
+                                </li>
+                        </ol>
+
+                        <div class="d-grid gap-2 col-6 mx-auto">
+                            <button class="btn btn-primary" type="button">
+                Vaciar Carrito
+            </button>
+                            <button class="btn btn-primary" type="button">Comprar</button>
+                        </div>
+
+                        <%-include ('footer'); -%>
                             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
