--- a/views/carrito-compras.ejs
+++ b/views/carrito-compras.ejs
@@ -25,30 +25,32 @@
                                     Diversos niveles
                                 </div>
                                 <div class="card" style="width: 10rem">
-                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
+                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
                                 </div>
                                 <button type="button" class="btn btn-danger">Eliminar</button>
-                                <li class="list-group-item d-flex justify-content-between align-items-start">
-                                    <div class="ms-2 me-auto">
-                                        <div class="fw-bold">Cuenta Nave Vía Láctea</div>
-                                        Nivel 451
-                                    </div>
-                                    <div class="card" style="width: 10rem">
-                                        <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
-                                    </div>
+                            </li>
 
-                                    <button type="button" class="btn btn-danger">Eliminar</button>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-start">
-                                    <div class="ms-2 me-auto">
-                                        <div class="fw-bold">Cuwnta Sol Naciente</div>
-                                        Nivel 999
-                                    </div>
-                                    <div class="card" style="width: 10rem">
-                                        <img src="img/slider-6.jpg" class="card-img-top" loading="lazy">
-                                    </div>
-                                    <button type="button" class="btn btn-danger">Eliminar</button>
-                                </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Cuenta Nave Vía Láctea</div>
+                                    Nivel 451
+                                </div>
+                                <div class="card" style="width: 10rem">
+                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
+                                </div>
+
+                                <button type="button" class="btn btn-danger">Eliminar</button>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Cuwnta Sol Naciente</div>
+                                    Nivel 999
+                                </div>
+                                <div class="card" style="width: 10rem">
+                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
+                                </div>
+                                <button type="button" class="btn btn-danger">Eliminar</button>
+                            </li>
                         </ol>
 
                         <div class="d-grid gap-2 col-6 mx-auto">
