--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,39 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Products</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous"
-        />
-    </head>
 
-    <body>
-        <% if (login) { %> 
-            <%-include('header',{login:login,username:username});-%> 
-        <% }else{ %> 
-            <%-include('header',{login:login}); -%> 
-        <%}%> 
-        <%data.forEach(packet => {%>
-        <a href="/products/<%=packet.sku%> " style="text-decoration: none; color: #000;">
-            <div>
-                <h5><%=packet.name%></h5>
-                <h5><%=packet.description%></h5>
-                <h5><%=packet.price%></h5>
-                <h5><%=packet.partialDelete%></h5>
-            </div>
-        </a>
-        <% }) %>
-        <%- include ('footer'); -%>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+</head>
+
+<body>
+    <% if (login) { %>
+        <%-include('header',{login:login,username:username});-%>
+            <% }else{ %>
+                <%-include('header',{login:login}); -%>
+                    <%}%>
+                        <%data.forEach(packet =>
+        {%>
+                            <a href="/products/<%=packet.sku%> " style="text-decoration: none; color: #000">
+                                <div>
+                                    <h5>
+                                        <%=packet.name%>
+                                    </h5>
+                                    <h5>
+                                        <%=packet.description%>
+                                    </h5>
+                                    <h5>
+                                        <%=packet.price%>
+                                    </h5>
+                                    <h5>
+                                        <%=packet.partialDelete%>
+                                    </h5>
+                                </div>
+                            </a>
+
+                            <div class="row container-fluid">
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Special title treatment</h5>
+                                            <p class="card-text">
+                                                With supporting text below as a natural lead-in to additional content.
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <% }) %>
+                                <%- include ('footer'); -%>
+                                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</body>
+
 </html>
