--- a/views/carrito-compras.ejs
+++ b/views/carrito-compras.ejs
@@ -1,112 +1,92 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PayTooWin</title>
+        <title>Catalogo</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="css/index.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
+
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+        </style>
+        <link href="css/signin.css" rel="stylesheet" />
     </head>
-
+<center>
     <body>
-        <% if (login) { %> <%-include('header',{login:login,username:username});
-        -%> <% }else{ %> <%-include('header',{login:login}); -%> <%}%>
-        <div
-            class="row container-fluid"
-            style="margin-left: 8px; margin-top: 7px; margin-bottom: 7px"
-        >
-            <ol class="list-group list-group-numbered">
-                <li
-                    class="list-group-item d-flex justify-content-between align-items-start"
-                >
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">Cuenta Nave Tridimensional</div>
-                        Nivel 41
-                    </div>
-                    <div style="padding-inline: 50px;">
-                        <div class="card" style="width: 9rem">
-                        <img
-                            src="img/slider-6.jpg"
-                            class="card-img-top"
-                            loading="lazy"
-                        />
-                    </div>
-                    </div>
-                    
+       
+        <% if (login) { %>
+        <%-include('header',{login:login,username:username});-%> <% }else{ %>
+        <%-include('header',{login:login}); -%> <%}%> 
+        
+       
+        <div class="container">
+            <div class="row">
+                
+        <% if (data) { %>
+            <%data.forEach(packet =>{%>
 
-                    <div style="padding: 50px;">
-                        <button type="button" class="btn btn-danger">
-                            Eliminar
+                <div class="col-4 mt-4">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">
+                              <a
+                              href=" "
+                              style="text-decoration: none; color: #000"
+                              >
+                              <%=packet.products_sku%>
+                              </a> 
+                          </h5><br>
+                         
+                          
+                          <button class="w-100 btn btn-lg btn-danger" type="submit">
+                            Vaciar Carrito
                         </button>
-                    </div>
-                </li>
+                      </div>
+                  </div>
+                </div>
 
-                <li
-                    class="list-group-item d-flex justify-content-between align-items-start"
-                >
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">Cuenta Nave Vía Láctea</div>
-                        Nivel 451
-                    </div>
-                    <div style="padding-inline: 50px;">
-                        <div class="card" style="width: 9rem">
-                        <img
-                            src="img/slider-6.jpg"
-                            class="card-img-top"
-                            loading="lazy"
-                        />
-                    </div>
-                    </div>
-                    
+          
+          <% }) %> 
+        <% } %> 
 
-                    <div style="padding: 50px;">
-                        <button type="button" class="btn btn-danger">
-                            Eliminar
-                        </button>
-                    </div>
-                </li>
-                <li
-                    class="list-group-item d-flex justify-content-between align-items-start"
-                >
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">Cuenta Nave Estelar</div>
-                        Nivel 1602
-                    </div>
-                    <div style="padding-inline: 50px;">
-                        <div class="card" style="width: 9rem">
-                        <img
-                            src="img/slider-6.jpg"
-                            class="card-img-top"
-                            loading="lazy"
-                        />
-                    </div>
-                    </div>
-                    
-
-                    <div style="padding: 50px;">
-                        <button type="button" class="btn btn-danger">
-                            Eliminar
-                        </button>
-                    </div>
-                </li>
-            </ol>
+        
+            </div>
         </div>
-        <div class="d-grid gap-2 col-3 mx-auto" style="margin-top:8px; margin-bottom: 8px;">
-            <button class="btn btn-danger" type="button">Vaciar Carrito</button>
-            <button class="btn btn-primary" type="button">Comprar</button>
-        </div>
+    
 
-        <%-include ('footer'); -%>
+        
+        <%- include ('footer'); -%>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"
         ></script>
+        
     </body>
+</center>
 </html>
