--- a/views/carrito-compras.ejs
+++ b/views/carrito-compras.ejs
@@ -1,92 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Catalogo</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous"
-        />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous"
-        />
-        <style>
-            .bd-placeholder-img {
-                font-size: 1.125rem;
-                text-anchor: middle;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                user-select: none;
-            }
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Catalogo</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+			crossorigin="anonymous"
+		/>
+		<style>
+			.bd-placeholder-img {
+				font-size: 1.125rem;
+				text-anchor: middle;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				user-select: none;
+			}
 
-            @media (min-width: 768px) {
-                .bd-placeholder-img-lg {
-                    font-size: 3.5rem;
-                }
-            }
-        </style>
-        <link href="css/signin.css" rel="stylesheet" />
-    </head>
-<center>
-    <body>
-       
-        <% if (login) { %>
-        <%-include('header',{login:login,username:username});-%> <% }else{ %>
-        <%-include('header',{login:login}); -%> <%}%> 
-        
-       
-        <div class="container">
-            <div class="row">
-                
-        <% if (data) { %>
-            <%data.forEach(packet =>{%>
+			@media (min-width: 768px) {
+				.bd-placeholder-img-lg {
+					font-size: 3.5rem;
+				}
+			}
+		</style>
+		<link href="css/signin.css" rel="stylesheet" />
+	</head>
+	<center>
+		<body>
+			<% if (login) { %>
+			<%-include('header',{login:login,username:username});-%> <% }else{
+			%> <%-include('header',{login:login}); -%> <%}%> 
+            <div class="container">
+            <% if (data) { %>
+                <% console.log(data)%>;
+			<%data.forEach(packet =>{%>
+				<div class="row">
+					<div class="col-4 mt-4">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">
+									<a
+										href=" "
+										style="
+											text-decoration: none;
+											color: #000;
+										"
+									>
+										<%=packet.products_sku%>
+									</a>
+								</h5>
+								<br />
 
-                <div class="col-4 mt-4">
-                  <div class="card">
-                      <div class="card-body">
-                          <h5 class="card-title">
-                              <a
-                              href=" "
-                              style="text-decoration: none; color: #000"
-                              >
-                              <%=packet.products_sku%>
-                              </a> 
-                          </h5><br>
-                         
-                          
-                          <button class="w-100 btn btn-lg btn-danger" type="submit">
-                            Vaciar Carrito
-                        </button>
-                      </div>
-                  </div>
-                </div>
-
-          
-          <% }) %> 
-        <% } %> 
-
-        
-            </div>
+								<button
+									class="w-100 btn btn-lg btn-danger"
+									type="submit"
+								>
+									Vaciar Carrito
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			<% }) %> 
         </div>
-    
+            
+            <% } %> <%- include ('footer'); -%>
+			<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-        
-        <%- include ('footer'); -%>
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"
-        ></script>
-        
-    </body>
-</center>
+			<script
+				src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+				integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+				crossorigin="anonymous"
+			></script>
+		</body>
+	</center>
 </html>
